--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addon-storysource": "^6.0.26",
-    "@storybook/addons": "^5.3.19",
+    "@storybook/addon-actions": "^6.1.0-alpha.23",
+    "@storybook/addon-links": "^6.1.0-alpha.23",
+    "@storybook/addon-storysource": "^6.1.0-alpha.23",
+    "@storybook/addons": "^6.1.0-alpha.23",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^5.3.19",
+    "@storybook/react": "^6.1.0-alpha.23",
     "csscomb": "^4.3.0"
   }
 }
